stateDiagram-v2
    [*] --> idle
    state planning {
        triage
        research
        discuss
        architect
        plan
        plan-review
        triage --> research : ADVANCE
        research --> discuss : ADVANCE
        research --> research : ADVANCE
        discuss --> architect : ADVANCE
        architect --> plan : ADVANCE
        plan --> plan-review : ADVANCE
        plan-review --> plan : ADVANCE
    }
    state executing {
        execute
        checks
        execute --> checks : ADVANCE
        checks --> execute : ADVANCE
    }
    state reviewing {
        verify
        review
        learn
        verify --> review : ADVANCE
        review --> learn : ADVANCE
    }
    state finalizing {
        finalize
    }
    idle --> triage : ADVANCE
    plan-review --> execute : ADVANCE
    checks --> verify : ADVANCE
    verify --> checks : ADVANCE
    review --> execute : ADVANCE
    learn --> plan : ADVANCE
    learn --> finalize : ADVANCE
    finalize --> idle : ADVANCE
    finalize --> execute : ADVANCE
    finalize --> review : ADVANCE
